# dshed

./: INSTALATION.md  README.md  pyproject.toml  sample.env
app/: main.py
app/core/: config.py  database.py
v1/: router.py
v1/private/: __init__.py
v1/public/: __init__.py
